--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Set up and run regular server
         run: |
-          docker-compose up optimade &
+          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
 
@@ -36,7 +37,8 @@ jobs:
 
       - name: Set up and run index server
         run: |
-          docker-compose up optimade-index &
+          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade-index &
           .github/workflows/wait_for_it.sh localhost:3214 -t 120
           sleep 15
 
@@ -56,7 +58,8 @@ jobs:
 
       - name: Set up and run regular server (which includes all versioned base URLs)
         run: |
-          docker-compose up optimade &
+          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
 
