Introduce 'validator version' input parameter
Can be either:
- 'latest': Will install the latest PyPI released version
- PyPI released version (e.g., 'v0.6.0' or '0.6.0')
- optimade-python-tools branch, tag or commit (anything that is
accepted
by pip to install as reference)

And will be tested for in that order as well.

Update README with new parameter.

Enforce --no-cache for installing optimade.

Use tarball directly from GitHub.

--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,15 @@ inputs:
     description: Whether or not this is an index meta-database
     required: false
     default: false
+  validator version:
+    description: >
+      Full version of an OPTiMaDe Python tools release to PyPI, e.g., '0.6.0' or '0.3.4', which hosts the `optimade_validator`.
+      It can also be a branch, tag, or git commit to use from the GitHub repository, e.g., 'master', 'v0.6.0' or '5a5e903'.
+      See https://pip.pypa.io/en/latest/reference/pip_install/#git for more information of what is allowed here.
+      Finally, it may also be 'latest' (default), which is understood to be the latest official release of the `optimade` package on PyPI.
+      Note, for the latest development version, choose 'master'.
+    required: true
+    default: latest
 runs:
   using: 'docker'
   image: 'Dockerfile'
