--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -76,3 +76,24 @@ jobs:
           port: 3213
           path: ""
           all versioned paths: yes
+
+  validator_version:
+    runs-on: ubuntu-latest
+    name: Use validator from git commit sha
+
+    steps:
+      - uses: actions/checkout@master
+
+      - name: Set up and run regular server
+        run: |
+          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
+          .github/workflows/wait_for_it.sh localhost:3213 -t 120
+          sleep 15
+
+      - name: Run action
+        uses: ./
+        with:
+          port: 3213
+          path: /v0
+          validator version: 141296ff395f129fad689ed9e36eba13b4e854bb
