--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Set up and run regular server (which includes all versioned base URLs)
         run: |
-          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
