--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -13,11 +13,11 @@ jobs:
     name: Regular server
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - name: Set up and run regular server
         run: |
-          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
@@ -33,11 +33,11 @@ jobs:
     name: Index server
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - name: Set up and run index server
         run: |
-          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade-index &
           .github/workflows/wait_for_it.sh localhost:3214 -t 120
           sleep 15
@@ -54,11 +54,11 @@ jobs:
     name: All versioned paths for regular server
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - name: Set up and run regular server (which includes all versioned base URLs)
         run: |
-          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
@@ -82,7 +82,7 @@ jobs:
     name: Run BATS test suite for entrypoint.sh
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - name: Build BATS environment
         run: docker build -t optimade_bats ./tests
@@ -95,11 +95,11 @@ jobs:
     name: Use validator from git commit sha
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - name: Set up and run regular server
         run: |
-          git clone https://github.com/Materials-Consortia/optimade-python-tools
+          git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
           .github/workflows/wait_for_it.sh localhost:3213 -t 120
           sleep 15
@@ -109,4 +109,4 @@ jobs:
         with:
           port: 3213
           path: /v0
-          validator version: 141296ff395f129fad689ed9e36eba13b4e854bb
+          validator version: ad68951fc6089402392c6299e8206d19a570d060
