--- a/action.yml
+++ b/action.yml
@@ -58,7 +58,7 @@ inputs:
 
   validator version:
     description: >
-      Full version of an OPTIMADE Python tools release to PyPI, e.g., '0.6.0' or '0.3.4', which hosts the `optimade_validator`.
+      Full version of an OPTIMADE Python tools release to PyPI, e.g., '0.6.0' or '0.3.4', which hosts the `optimade-validator`.
       It can also be a branch, tag, or git commit to use from the GitHub repository, e.g., 'master', 'v0.6.0' or '5a5e903'.
       See https://pip.pypa.io/en/latest/reference/pip_install/#git for more information of what is allowed here.
       Finally, it may also be 'latest' (default), which is understood to be the latest official release of the `optimade` package on PyPI.
