Temporarily use master in CI

--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           port: 3213
           path: /v1
+          validator version: master
 
   validator_index:
     runs-on: ubuntu-latest
@@ -48,6 +49,7 @@ jobs:
           port: 3214
           path: /v1
           index: yes
+          validator version: master
 
   all_versioned_paths:
     runs-on: ubuntu-latest
@@ -69,6 +71,7 @@ jobs:
           port: 3213
           path: /
           all versioned paths: yes
+          validator version: master
 
       - name: Run action (setting path to empty string)
         uses: ./
@@ -76,6 +79,7 @@ jobs:
           port: 3213
           path: ""
           all versioned paths: yes
+          validator version: master
 
   bats:
     runs-on: ubuntu-latest
