Updated validator flags (#21)
* Updated validator flags

* Renamed entrypoint optimade_validator->optimade-validator

* Switch all versioned URLs from /v0 to /v1

* Update validator version to recent PR commit

* Use case

Use case for fail_fast and skip_optional in order to respect that they
are boolean variables.

* Temporarily use specific commit as default

This is for bats tests. By default, use commit
d71275a38f3c0e778408f22b6a2566c1e901793a from optimade-python-tools.

This is a temporary fix for `optimade_validator`->`optimade-validator`.

* Update teardown() and use defaults for new vars

It seems asserts (tests) cannot be run in teardown(), hence the test
that the final `optimade-validator ...` call is correct for each test
has been moved to each test separately, and the teardown() function now
only removes the temporary output file.

Also, use the default values correctly for `skip_optional` and
`fail_fast`.

* Use -U for all pip install

This ensures that if running the tests locally, any pip entry-points
will be updated correctly for all tests always.

Also, use `>` everywhere for writing to the temporary output test file.

* Update README test description and run script

Use pseudo-TTY when running Docker to get the pretty printing of BATS
testing.

Update README part describing the run script to include the
DOCKER_BATS_TEST_PATH parameter description.

* Update Dockerfiles

Use Python 3.8 for the action.

Use the newest BATS v1.2.1 and the updated repository paths for BATS
extras (assert and support).

* Don't use TTY for GH Actions CI tests

* Update to latest commit of #395 in python-tools

* Bump validator version SHA

* Further update to merged #395 from python-tools

* Use master for BATS and update commit for CI

* Update commit in CI after merge of 414

* Temporarily use master in CI

Co-authored-by: Casper Welzel Andersen <casper.andersen@epfl.ch>

--- a/action.yml
+++ b/action.yml
@@ -11,8 +11,8 @@ inputs:
     description: >
       Whether to test all possible versioned base URLs:
         /vMAJOR; /vMAJOR.MINOR; /vMAJOR.MINOR.PATCH
-      If this is 'true', the input 'path' MUST exempt the version part (e.g., '/optimade' instead of '/optimade/v0').
-      If this is 'false', the input 'path' MUST include the version part (e.g., '/optimade/v0' instead of '/optimade').
+      If this is 'true', the input 'path' MUST exempt the version part (e.g., '/optimade' instead of '/optimade/v1').
+      If this is 'false', the input 'path' MUST include the version part (e.g., '/optimade/v1' instead of '/optimade').
     required: false
     default: false
 
@@ -27,6 +27,11 @@ inputs:
     required: false
     default: gh_actions_host
 
+  fail fast:
+    description: Whether or not to exit and return a non-zero error code on first failure.
+    required: false
+    default: false
+
   index:
     description: Whether or not this is an index meta-database
     required: false
@@ -35,7 +40,7 @@ inputs:
   path:
     description: Path of the OPTIMADE (versioned) base URL - MUST start with '/'
     required: false
-    default: /v0
+    default: /v1
 
   port:
     description: Port for the OPTIMADE URL
@@ -46,9 +51,14 @@ inputs:
     required: false
     default: http
 
+  skip optional:
+    description: Whether or not to skip tests for optional features.
+    required: false
+    default: false
+
   validator version:
     description: >
-      Full version of an OPTIMADE Python tools release to PyPI, e.g., '0.6.0' or '0.3.4', which hosts the `optimade_validator`.
+      Full version of an OPTIMADE Python tools release to PyPI, e.g., '0.6.0' or '0.3.4', which hosts the `optimade-validator`.
       It can also be a branch, tag, or git commit to use from the GitHub repository, e.g., 'master', 'v0.6.0' or '5a5e903'.
       See https://pip.pypa.io/en/latest/reference/pip_install/#git for more information of what is allowed here.
       Finally, it may also be 'latest' (default), which is understood to be the latest official release of the `optimade` package on PyPI.
