--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -1,4 +1,4 @@
-name: Test optimade_validator GitHub Action
+name: Test optimade-validator GitHub Action
 
 on:
   pull_request:
@@ -26,7 +26,8 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v0
+          path: /v1
+          validator version: master
 
   validator_index:
     runs-on: ubuntu-latest
@@ -46,8 +47,9 @@ jobs:
         uses: ./
         with:
           port: 3214
-          path: /v0
+          path: /v1
           index: yes
+          validator version: master
 
   all_versioned_paths:
     runs-on: ubuntu-latest
@@ -69,6 +71,7 @@ jobs:
           port: 3213
           path: /
           all versioned paths: yes
+          validator version: master
 
       - name: Run action (setting path to empty string)
         uses: ./
@@ -76,6 +79,7 @@ jobs:
           port: 3213
           path: ""
           all versioned paths: yes
+          validator version: master
 
   bats:
     runs-on: ubuntu-latest
@@ -108,5 +112,5 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v0
-          validator version: ad68951fc6089402392c6299e8206d19a570d060
+          path: /v1
+          validator version: 38d822c73f3ca47986ada1e5e88f5fbdb6bdfd94
