--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -114,11 +114,17 @@ jobs:
   validator_version_fail:
     runs-on: ubuntu-latest
     name: Use validator with wrong version
+    continue-on-error: ${{ matrix.fail_run }}
+
+    strategy:
+      matrix:
+        fail_run: [true, false]
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Set up and run regular server
+        if: ${{ matrix.fail_run }}
         run: |
           git clone --recurse-submodules https://github.com/Materials-Consortia/optimade-python-tools
           docker-compose -f ./optimade-python-tools/docker-compose.yml up optimade &
@@ -126,12 +132,18 @@ jobs:
           sleep 15
 
       - name: Run action
+        if: ${{ matrix.fail_run }}
         uses: ./
         with:
           port: 3213
           path: /v1
           validator version: "0.0.0"
 
-      - name: Make sure the previous step failed
-        if: ${{ failure() }}
-        run: exit 0
+      - name: Make sure the "fail_run" failed
+        if: ${{ ! matrix.fail_run }}
+        run: |
+          if [ "${{ job.status }}" == "failure" ]; then
+            exit 0
+          else
+            exit 1
+          fi
