fail-fast: false, only one job at a time

--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -117,6 +117,8 @@ jobs:
     continue-on-error: ${{ matrix.fail_run }}
 
     strategy:
+      fail-fast: false
+      max-parallel: 1
       matrix:
         fail_run: [true, false]
 
