Fix if-statement to a single line

--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -136,8 +136,4 @@ jobs:
 
       - name: Make sure the "fail_run" failed
         run: |
-          if [ "${{ steps.action.outcome }}" == "failure" && "${{ steps.action.conclusion }}" == "success" ]; then
-            exit 0
-          else
-            exit 1
-          fi
+          if [ "${{ steps.action.outcome }}" == "failure" && "${{ steps.action.conclusion }}" == "success" ]; then exit 0; else exit 1; fi
