--- a/.github/workflows/update_vMAJOR.yml
+++ b/.github/workflows/update_vMAJOR.yml
@@ -10,6 +10,8 @@ jobs:
     if: github.repository == 'Materials-Consortia/optimade-validator-action' && startsWith(github.ref, 'refs/tags/v')
 
     steps:
+    - uses: actions/checkout@v2
+
     - name: Update version and update 'master'
       uses: CasperWA/push-protected@v1
       with:
