--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -27,7 +27,7 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v1
+          path: /
 
   validator_index:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
         uses: ./
         with:
           port: 3214
-          path: /v1
+          path: /
           index: yes
 
   all_versioned_paths:
@@ -109,7 +109,7 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v1
+          path: /
           validator version: c6551e27f64abdaa94afd401db22af9ef2afd23d
 
   validator_version_fail:
@@ -132,7 +132,7 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v1
+          path: /
           validator version: "0.0.0"
 
       - name: This runs ONLY if 'Run action' doesn't fail as expected
