--- a/action.yml
+++ b/action.yml
@@ -11,8 +11,7 @@ inputs:
     description: >
       Whether to test all possible versioned base URLs:
         /vMAJOR; /vMAJOR.MINOR; /vMAJOR.MINOR.PATCH
-      If this is 'true', the input 'path' MUST exempt the version part (e.g., '/optimade' instead of '/optimade/v1').
-      If this is 'false', the input 'path' MUST include the version part (e.g., '/optimade/v1' instead of '/optimade').
+      The latter two being optional base URLs according to the specification.
     required: false
     default: false
 
@@ -23,7 +22,7 @@ inputs:
     required: false
 
   domain:
-    description: Domain for the OPTIMADE URL (defaults to the GH Actions runner host)
+    description: Domain for the OPTIMADE URL (defaults to the GH Actions runner host).
     required: false
     default: gh_actions_host
 
@@ -33,21 +32,24 @@ inputs:
     default: false
 
   index:
-    description: Whether or not this is an index meta-database
+    description: Whether or not this is an index meta-database.
     required: false
     default: false
 
   path:
-    description: Path of the OPTIMADE (versioned) base URL - MUST start with '/'
+    description: >
+      Path to append to the domain to reach the OPTIMADE unversioned base URL - MUST start with `/`.
+      The path MUST NOT include the versioned part of the base URL.
+      Rather, it MUST point to the unversioned base URL of your OPTIMADE implementation.
     required: false
-    default: /v1
+    default: /
 
   port:
-    description: Port for the OPTIMADE URL
+    description: Port for the OPTIMADE URL.
     required: false
 
   protocol:
-    description: Protocol for the OPTIMADE URL
+    description: Protocol for the OPTIMADE URL.
     required: false
     default: http
 
