--- a/.github/workflows/update_vMAJOR.yml
+++ b/.github/workflows/update_vMAJOR.yml
@@ -8,37 +8,31 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     if: github.repository == 'Materials-Consortia/optimade-validator-action' && startsWith(github.ref, 'refs/tags/v')
+    env:
+      PUBLISH_UPDATE_BRANCH: master
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: Update version and update 'master'
-      uses: CasperWA/push-protected@v2.1.0
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install Python dependencies
+      run: |
+        python -m pip install -U pip
+        pip install -U invoke
+
+    - name: Update version and tags
+      run: .github/update_version/update_version.sh
+
+    - name: Update '${{ env.PUBLISH_UPDATE_BRANCH }}'
+      uses: CasperWA/push-protected@v2
       with:
         token: ${{ secrets.RELEASE_PAT_CASPER }}
-        changes: .github/update_version/update_version.sh
+        branch: ${{ env.PUBLISH_UPDATE_BRANCH }}
         unprotect_reviews: true
-
-    - name: Update tags to latest commit (getting the newest version locally)
-      run: |
-        git config --local user.email "dev@optimade.org"
-        git config --local user.name "OPTIMADE Developers"
-
-        git fetch origin
-        git branch master origin/master
-        git checkout master
-
-        # Create new full version (v<MAJOR>.<MINOR>.<PATCH>) tag
-        TAG_MSG=.github/update_version/release_tag_msg.txt
-        sed -i "s|TAG_NAME|${GITHUB_REF#refs/tags/}|g" "${TAG_MSG}"
-
-        git tag -af -F "${TAG_MSG}" ${GITHUB_REF#refs/tags/}
-
-        # Move/update v<MAJOR> tag
-        MAJOR_VERSION=$( echo ${GITHUB_REF#refs/tags/v} | cut -d "." -f 1 )
-        TAG_MSG=.github/update_version/major_version_tag_msg.txt
-        sed -i "s|MAJOR|${MAJOR_VERSION}|g" "${TAG_MSG}"
-
-        git tag -af -F "${TAG_MSG}" v${MAJOR_VERSION}
-
-        git push -f --tags
+        force: true
+        tags: true
