--- a/action.yml
+++ b/action.yml
@@ -9,11 +9,21 @@ inputs:
 
   all versioned paths:
     description: >
-      Whether to test all possible versioned base URLs:
-        /vMAJOR; /vMAJOR.MINOR; /vMAJOR.MINOR.PATCH
-      The latter two being optional base URLs according to the specification.
+      Whether to test the optional versioned URLs:
+        /vMAJOR.MINOR; /vMAJOR.MINOR.PATCH
+      If `false`, only the mandatory /vMAJOR URL will be tested.
     required: false
     default: false
+
+  validate unversioned paths:
+      description: >
+        Whether to validate the input URL as a full OPTIMADE implementation without appending any version.
+        This action assumes that the `path` parameter will contain an unversioned URL.
+        As it is not mandatory to run a full OPTIMADE implementation from the unversioned URL,
+        by default, this action will not perform any validation of this URL, beyond checking
+        the `/versions` endpoint.
+      required: false
+      default: false
 
   as type:
     description: >
