TEMP: Set verbosity to 2 and no output for as type

--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -209,8 +209,9 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: /v1.0/structures
-          create output: true
+          path: "/v1.0/structures"
+          create output: false
+          verbosity: 2
           as type: structures
 
       - name: Check "as type" output
