--- a/.github/workflows/validator_action.yml
+++ b/.github/workflows/validator_action.yml
@@ -209,10 +209,10 @@ jobs:
         uses: ./
         with:
           port: 3213
-          path: "/v1.0/structures"
-          create output: false
-          verbosity: 3
+          path: /v1.0/structures
+          create output: true
           as type: structures
+          validator version: try-as_type-fix-validator
 
       - name: Check "as type" output
         env:
