--- a/.github/workflows/ci_dependabot.yml
+++ b/.github/workflows/ci_dependabot.yml
@@ -2,9 +2,8 @@ name: CI - Single Dependabot PR
 
 on:
   schedule:
-    # At 6:30 UTC every Wednesday
-    # Dependabot runs daily at between 4 and 5 UTC
-    - cron: "30 6 * * 3"
+    # At 6:30 UTC on the first of every month
+    - cron: "30 6 1 * *"
 
 jobs:
 
