Add OPIMADE_BASE_URL env var

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -72,6 +72,8 @@ jobs:
         image: ghcr.io/materials-consortia/optimade:develop
         ports:
           - 3213:5000
+        env:
+          OPTIMADE_BASE_URL: http://localhost:3213
 
     steps:
       - uses: actions/checkout@v3
@@ -101,6 +103,7 @@ jobs:
           - 3214:5000
         env:
           MAIN: main_index
+          OPTIMADE_BASE_URL: http://localhost:3214
 
     steps:
       - uses: actions/checkout@v3
@@ -121,6 +124,8 @@ jobs:
         image: ghcr.io/materials-consortia/optimade:develop
         ports:
           - 3213:5000
+        env:
+          OPTIMADE_BASE_URL: http://localhost:3213
 
     steps:
       - uses: actions/checkout@v3
@@ -162,6 +167,8 @@ jobs:
         image: ghcr.io/materials-consortia/optimade:develop
         ports:
           - 3213:5000
+        env:
+          OPTIMADE_BASE_URL: http://localhost:3213
 
     steps:
       - uses: actions/checkout@v3
@@ -182,6 +189,8 @@ jobs:
         image: ghcr.io/materials-consortia/optimade:develop
         ports:
           - 3213:5000
+        env:
+          OPTIMADE_BASE_URL: http://localhost:3213
 
     steps:
       - uses: actions/checkout@v3
@@ -210,6 +219,8 @@ jobs:
         image: ghcr.io/materials-consortia/optimade:develop
         ports:
           - 3213:5000
+        env:
+          OPTIMADE_BASE_URL: http://localhost:3213
 
     steps:
       - uses: actions/checkout@v3
